--- a/index.html
+++ b/index.html
@@ -11,11 +11,23 @@
     <h1>MY WEB PAGE ON PRACTCE ON DOM MANIPULATION</h1>
     <p class="heading">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum suscipit quaerat incidunt consectetur ex possimus deserunt sequi, distinctio blanditiis facilis reiciendis nesciunt ipsum quos totam pariatur unde et provident commodi.</p>
     <p id="pgh">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum suscipit quaerat incidunt consectetur ex possimus deserunt sequi, distinctio blanditiis facilis reiciendis nesciunt ipsum quos totam pariatur unde et provident commodi.</p>
+    <section>
+        <h1>STEP 1</h1>
+        <p  id="step1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam quis repellat dolores fugiat, consequuntur sequi vitae libero perspiciatis, aliquid perferendis voluptates! Iure possimus quis, ipsa praesentium libero voluptatibus provident autem?</p>
+    <img src="images/mikhail-fesenko-p6YWrjhmjhM-unsplash.jpg" alt="">
+
+        <h1 >STEP 2</h1>
+        <p class="step2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam quis repellat dolores fugiat, consequuntur sequi vitae libero perspiciatis, aliquid perferendis voluptates! Iure possimus quis, ipsa praesentium libero voluptatibus provident autem?</p>
+
+    </section>
     <form action="">
         <input type="text" name="" id="" placeholder="username"> 
         <input type="password" name="" id="inpt" placeholder="password"> 
         <input type="submit" id="btn">
+        <input type="checkbox" name="i agree" id="" placeholder=" i accept the terms and condtions on this website" value="i agree">
+        <input type="range" value="20" max="600" min="20">
     </form>
+    <div class="box"> <a href="https://www.linkedin.com/in/daniel-ojingwa-0a9450208/" target="_blank">linkden account</a></div>
     <script src="script.js"></script>
 
 </body>
