added a list of elements

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 
         <h1 >STEP 2</h1>
         <p class="step2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam quis repellat dolores fugiat, consequuntur sequi vitae libero perspiciatis, aliquid perferendis voluptates! Iure possimus quis, ipsa praesentium libero voluptatibus provident autem?</p>
+        <h2>FIVES DECISIONS WE MUST MAKE</h2>
+        <ul>
+            <li>A DECISION TO BE SERIOUS WITH GOD</li>
+            <li>A DECISION TO BE TRANSFORMED</li>
+            <li>A DECISION TO BE EXTREMELY VALUABLE</li>
+            <li>A DECISION TO BE FINANCIALLY INDEPENDENCE</li>
+            <li>A DECISION FOR DESTINY RELATIONSHIPS</li>
+        </ul>
 
     </section>
     <form action="">
