--- a/index.html
+++ b/index.html
@@ -18,13 +18,22 @@
 
         <h1 >STEP 2</h1>
         <p class="step2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam quis repellat dolores fugiat, consequuntur sequi vitae libero perspiciatis, aliquid perferendis voluptates! Iure possimus quis, ipsa praesentium libero voluptatibus provident autem?</p>
-        <h2>FIVES DECISIONS WE MUST MAKE</h2>
+        <img src="images/God.jfif" alt="">
+        <h1>FIVES DECISIONS WE MUST MAKE</h1>
         <ul>
             <li>A DECISION TO BE SERIOUS WITH GOD</li>
             <li>A DECISION TO BE TRANSFORMED</li>
             <li>A DECISION TO BE EXTREMELY VALUABLE</li>
             <li>A DECISION TO BE FINANCIALLY INDEPENDENCE</li>
             <li>A DECISION FOR DESTINY RELATIONSHIPS</li>
+        </ul>
+        <h1>NEEDED ITEMS</h1>
+        <ul class="items">
+            <li class="item">LAPTOP</li>
+            <li  class="item">ELECTRICITY SUPPLY</li>
+            <li  class="item">INTERNET CONNECTION</li>
+            <li  class="item">CONSISTENCY</li>
+            <li  class="item">A GROUP TO ANALYIZE THE PROGRESS MADE</li>
         </ul>
 
     </section>
